Pagination works for full catalog

--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -16,6 +16,9 @@
                     Flower Shop
                 {% endif %}
         </title>
+        <nav>
+            <a href="{{ url_for('store.search') }}">Search</a>
+        </nav>
     <head>
 
     <body>
