--- a/src/flower_store/templates/results.html
+++ b/src/flower_store/templates/results.html
@@ -2,4 +2,21 @@
     {% for flower in flowers %}
         {% include "_flower.html" %}
     {% endfor %}
+
+    <nav aria-label="...">
+        <ul>
+            <!-- <li class="previous{% if not prev_url %} disabled{% endif %}"> -->
+            <li>
+                <a href="{{ prev_url or '#' }}">
+                    <span aria-hidden="true">&larr;</span> Newer posts
+                </a>
+            </li>
+            <!-- <li class="next{% if not next_url %} disabled{% endif %}"> -->
+            <li>
+                <a href="{{ next_url or '#' }}">
+                    Older posts <span aria-hidden="true">&rarr;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 {% endif %}
