Display images, add links to full flower pages

--- a/src/flower_store/templates/_flower.html
+++ b/src/flower_store/templates/_flower.html
@@ -1,7 +1,6 @@
 <!-- `flower` is provided by the parent template -->
 <div>
-    <!-- TODO: include flower.image_file -->
-    <p>{{ flower.name }}</p>
-    <!-- TODO: include link to flower's page -->
+    <img src="{{ url_for('static', filename='flower_imgs/' + flower.image_file) }}">
+    <a href="{{ url_for('catalog.flower', flower_id=flower.id) }}">{{ flower.name }}</a>
 </div>
 <!-- or: <article></article> ? -->
