--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -17,7 +17,7 @@
                 {% endif %}
         </title>
         <nav>
-            <a href="{{ url_for('store.search') }}">Search</a>
+            <a href="{{ url_for('catalog.search') }}">Search</a>
         </nav>
     <head>
 
