--- a/src/flower_store/templates/results.html
+++ b/src/flower_store/templates/results.html
@@ -8,13 +8,13 @@
             <!-- <li class="previous{% if not prev_url %} disabled{% endif %}"> -->
             <li>
                 <a href="{{ prev_url or '#' }}">
-                    <span aria-hidden="true">&larr;</span> Newer posts
+                    <span aria-hidden="true">&larr;</span> Back
                 </a>
             </li>
             <!-- <li class="next{% if not next_url %} disabled{% endif %}"> -->
             <li>
                 <a href="{{ next_url or '#' }}">
-                    Older posts <span aria-hidden="true">&rarr;</span>
+                    Next <span aria-hidden="true">&rarr;</span>
                 </a>
             </li>
         </ul>
