Fixed Flask-Assets bundle locations and got htmx-backed search working

--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -29,5 +29,7 @@
         <section>
         {% block content %}{% endblock content %}
         </section>
+
+        <script src="https://unpkg.com/htmx.org@1.9.2"></script>
     </body>
 </html>
