--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         {% assets "css" %}
         <link rel="stylesheet" href="{{ ASSET_URL }}">
@@ -16,10 +16,13 @@
                     Flower Shop
                 {% endif %}
         </title>
-        <nav>
-            <a href="{{ url_for('catalog.search') }}">Search</a>
-        </nav>
     <head>
+
+    <nav id="menu">
+        <a href="{{ url_for('catalog.catalog') }}">Catalog</a>
+
+        <a href="{{ url_for('catalog.search') }}">Search</a>
+    </nav>
 
     <body>
         <header>
