--- a/src/flower_store/templates/full_flower.html
+++ b/src/flower_store/templates/full_flower.html
@@ -5,5 +5,10 @@
 {% endblock header %}
 
 {% block content %}
-<img src="{{ image_file }}">
+    <div id="main">
+        <div class="inner">
+            <span class="image main"><img src="{{ image_file }}" alt="image of {{ title }}" /></span>
+            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+        </div>
+    </div>
 {% endblock content %}
