Setup User table, admin views, login, flashed messages in base

--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -27,6 +27,18 @@
         </header>
         
         <section>
+        <div>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                <div style="color: red;">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+            {% endwith %}
+
+            {# application content needs to be provided in the app_content block #}
+            {% block app_content %}{% endblock %}
+        </div>
         {% block content %}{% endblock content %}
         </section>
 
