--- a/src/flower_store/templates/home.html
+++ b/src/flower_store/templates/home.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
-
 {% block header %}
-<h1>{% block title %}Flower Shop{% endblock title %}</h1>
+    <h1>
+        {% block title %}
+            Flower Shop
+        {% endblock title %}
+    </h1>
 {% endblock header %}
-
 {% block content %}
 {% endblock content %}
