--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -1,46 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        {% assets "css" %}
-            <link rel="stylesheet" href="{{ ASSET_URL }}" />
-        {% endassets %}
-        <title>
-            {% if title %}
-                {{ title }} - Flower Shop
-            {% else %}
-                Flower Shop
-            {% endif
-            %}
-        </title>
-        <nav>
-            <a href="{{ url_for("catalog.search") }}">Search</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% assets "css" %}
+      <link rel="stylesheet" href="{{ ASSET_URL }}" />
+    {% endassets %}
+    <title>
+      {% if title %}
+        {{ title }} - Flower Shop
+      {% else %}
+        Flower Shop
+      {% endif
+      %}
+    </title>
+  </head>
+  <body>
+    <div class="grid grid-cols-5">
+      <div class="flex justify-center col-span-5 md:justify-evenly md:col-span-1">
+        <nav class="my-6 md:text-right">
+          <ul class="text-sm flex border-b border-b-pink-300 pb-4 md:pb-0 md:border-b-0 md:block md:mb-6 md:border-r md:border-r-pink-300">
+            <li class="px-4 md:mb-4">
+              <a href="{{ url_for("home") }}">Home</a>
+            </li>
+            <li class="px-4 md:mb-4">
+              <a href="{{ url_for("catalog.catalog") }}">Catalog</a>
+            </li>
+            <li class="px-4 md:mb-4">
+              <a href="{{ url_for("catalog.search") }}">Search</a>
+            </li>
+          </ul>
         </nav>
-    </head>
-    <body>
-        <header>
-            {% block header %}
-            {% endblock header %}
-        </header>
+      </div>
+      <header class="grid col-span-5 justify-center md:col-span-4 md:my-10">
+        <h1 class="text-2xl font-bold md:text-4xl">
+          {% block header %}
+          {% endblock header %}
+        </h1>
+      </header>
+      <main class="grid col-span-5 justify-center md:col-span-4 m-4">
         <section>
-            <div>
-                {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        {% for
-                            message in messages %}
-                            <div style="color: red">{{ message }}</div>
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
-                {# application content needs to
-be provided in the app_content block #}
-                {% block app_content %}{% endblock %}
-            </div>
-            {% block content %}
-            {% endblock content %}
+          <div>
+            {% with messages = get_flashed_messages() %}
+              {% if messages %}
+                {% for
+                  message in messages %}
+                  <div style="color: red">{{ message }}</div>
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
+            {# application content needs to be provided in the app_content block #}
+            {% block app_content %}{% endblock %}
+          </div>
+          {% block content %}
+          {% endblock content %}
         </section>
-        <script src="https://unpkg.com/htmx.org@1.9.2"></script>
-    </body>
+      </main>
+    </div>
+    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+  </body>
 </html>
