--- a/src/flower_store/templates/catalog.html
+++ b/src/flower_store/templates/catalog.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block header %}
-    <h1>Catalog</h1>
+  Catalog
 {% endblock header %}
 {% block content %}
-    <h2>All Flowers</h2>
-    <div id="flower-results">{% include "results.html" %}</div>
+  <div id="flower-results">{% include "results.html" %}</div>
 {% endblock content %}
