--- a/src/flower_store/templates/results.html
+++ b/src/flower_store/templates/results.html
@@ -1,21 +1,22 @@
 {% if flowers is defined and flowers|length>0 %}
-    {% for flower in flowers %}
-        {% include "_flower.html" %}
-    {% endfor %}
-    <nav aria-label="...">
-        <ul>
-            <!-- <li class="previous{% if not prev_url %} disabled{% endif %}"> -->
-            <li>
-                <a href="{{ prev_url or '#' }}">
-                    <span aria-hidden="true">&larr;</span> Back
-                </a>
-            </li>
-            <!-- <li class="next{% if not next_url %} disabled{% endif %}"> -->
-            <li>
-                <a href="{{ next_url or '#' }}">
-                    Next <span aria-hidden="true">&rarr;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+  {% for flower in flowers %}
+    {%
+    include "_flower.html" %}
+  {% endfor %}
+  <nav aria-label="...">
+    <ul class="flex justify-between mt-4">
+      <!-- <li class="previous{% if not prev_url %} disabled{% endif %}"> -->
+      <li>
+        <a href="{{ prev_url or '#' }}">
+          <span aria-hidden="true">&larr;</span> Back
+        </a>
+      </li>
+      <!-- <li class="next{% if not next_url %} disabled{% endif %}"> -->
+      <li>
+        <a href="{{ next_url or '#' }}">
+          Next <span aria-hidden="true">&rarr;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 {% endif %}
