--- a/src/flower_store/templates/search.html
+++ b/src/flower_store/templates/search.html
@@ -1,13 +1,16 @@
 {% extends "base.html" %}
+{% block header %}
+  Search
+{% endblock header %}
 {% block content %}
-    <div>
-        <input type="text"
-               name="search"
-               hx-post="/search_results"
-               hx-trigger="keyup changed delay:250ms"
-               hx-indicator=".htmx-indicator"
-               hx-target="#flower-results"
-               placeholder="Search...">
-    </div>
-    <div id="flower-results">{% include "results.html" %}</div>
+  <div class="m-4">
+    <input type="text"
+           name="search"
+           hx-post="/search_results"
+           hx-trigger="keyup changed delay:250ms"
+           hx-indicator=".htmx-indicator"
+           hx-target="#flower-results"
+           placeholder="Search...">
+  </div>
+  <div id="flower-results">{% include "results.html" %}</div>
 {% endblock content %}
