--- a/src/flower_store/templates/catalog.html
+++ b/src/flower_store/templates/catalog.html
@@ -3,5 +3,5 @@
   Catalog
 {% endblock header %}
 {% block content %}
-  <div id="flower-results">{% include "results.html" %}</div>
+  {% include "results.html" %}
 {% endblock content %}
