--- a/src/flower_store/templates/_flower.html
+++ b/src/flower_store/templates/_flower.html
@@ -1,6 +1,8 @@
 <!-- `flower` is provided by the parent template -->
-<div>
-  <img src="{{ url_for('static', filename='flower_imgs/' + flower.image_file) }}">
-  <a href="{{ url_for('catalog.flower', flower_id=flower.id) }}">{{ flower.name }}</a>
+<div class="card">
+  <a href="{{ url_for('catalog.flower', flower_id=flower.id) }}">
+    <img class="w-full h-48 lg:h-72 object-cover"
+         src="{{ url_for('static', filename='flower_imgs/' + flower.image_file) }}">
+  {{ flower.name }}</a>
 </div>
 <!-- or: <article></article> ? -->
