--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -16,11 +16,11 @@
       %}
     </title>
   </head>
-  <body>
-    <div class="grid grid-cols-5">
-      <div class="flex justify-center col-span-5 md:justify-evenly md:col-span-1">
-        <nav class="my-6 md:text-right">
-          <ul class="text-sm flex border-b border-b-pink-300 pb-4 md:pb-0 md:border-b-0 md:block md:mb-6 md:border-r md:border-r-pink-300">
+  <body class="bg-gradient-to-br from-sky-100">
+    <div class="grid grid-cols-5 justify-items-center">
+      <div class="justify-center col-span-5 md:flex md:justify-evenly md:col-span-1">
+        <nav class="my-4 md:text-right">
+          <ul class="text-sm flex justify-center border-b border-b-pink-300 pb-4 md:pb-0 md:block md:mb-6 md:border-b-0 md:border-r md:border-r-pink-300">
             <li class="px-4 md:mb-4">
               <a href="{{ url_for("home") }}">Home</a>
             </li>
@@ -33,15 +33,15 @@
           </ul>
         </nav>
       </div>
-      <header class="grid col-span-5 justify-center md:col-span-4 md:my-10">
-        <h1 class="text-2xl font-bold md:text-4xl">
-          {% block header %}
-          {% endblock header %}
-        </h1>
-      </header>
-      <main class="grid col-span-5 justify-center md:col-span-4 m-4">
+      <main class="col-span-5 justify-center text-center md:col-span-4 px-8">
+        <header>
+          <h1 class="text-2xl font-bold my-4 md:text-4xl">
+            {% block header %}
+            {% endblock header %}
+          </h1>
+        </header>
         <section>
-          <div>
+          <div id="messages">
             {% with messages = get_flashed_messages() %}
               {% if messages %}
                 {% for
@@ -58,6 +58,9 @@
         </section>
       </main>
     </div>
+    <footer class="text-sm text-center p-8 mt-4 bg-pink-300 sticky">
+      Copyright 2023, Breezy
+    </footer>
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
   </body>
 </html>
