--- a/src/flower_store/templates/results.html
+++ b/src/flower_store/templates/results.html
@@ -1,22 +1,40 @@
 {% if flowers is defined and flowers|length>0 %}
-  {% for flower in flowers %}
-    {%
-    include "_flower.html" %}
-  {% endfor %}
+  <div class="grid sm:grid-cols-2 md:grid-cols-3 2xl:grid-cols-4 gap-10">
+    {% for flower in flowers %}
+      {% include "_flower.html" %}
+    {% endfor %}
+  </div>
   <nav aria-label="...">
     <ul class="flex justify-between mt-4">
-      <!-- <li class="previous{% if not prev_url %} disabled{% endif %}"> -->
+      <!-- <li class="{% if not prev_url %}hidden{% endif %}"> -->
       <li>
-        <a href="{{ prev_url or '#' }}">
-          <span aria-hidden="true">&larr;</span> Back
-        </a>
+        {% if prev_url %}
+          <a class="pager" href="{{ prev_url }}">
+            <span aria-hidden="true">&larr;</span> Back
+          </a>
+        {% else %}
+          <div class="text-gray-400">
+            <span aria-hidden="true">&larr;</span> Back
+          </div>
+        {% endif %}
       </li>
-      <!-- <li class="next{% if not next_url %} disabled{% endif %}"> -->
+      <!-- <li class="{% if not next_url %}hidden{% endif %}"> -->
       <li>
-        <a href="{{ next_url or '#' }}">
-          Next <span aria-hidden="true">&rarr;</span>
-        </a>
+        {% if next_url %}
+          <a class="pager" href="{{ next_url }}">
+            Next <span aria-hidden="true">&rarr;</span>
+          </a>
+        {% else %}
+          <div class="text-gray-400">
+            Next <span aria-hidden="true">&rarr;</span>
+          </div>
+        {% endif %}
       </li>
     </ul>
   </nav>
+{% else %}
+  <!-- Some empty space to serve as a buffer against the footer -->
+  <div>
+    <br class="my-20">
+  </div>
 {% endif %}
