--- a/src/flower_store/templates/search.html
+++ b/src/flower_store/templates/search.html
@@ -3,7 +3,7 @@
   Search
 {% endblock header %}
 {% block content %}
-  <div class="m-4">
+  <div class="text-center my-4 px-10 md:mx-30">
     <input type="text"
            name="search"
            hx-post="/search_results"
