--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -18,7 +18,7 @@
   </head>
   <body class="bg-gradient-to-br from-sky-100">
     <div class="grid grid-cols-5 justify-items-center">
-      <div class="justify-center col-span-5 md:flex md:justify-evenly md:col-span-1">
+      <div class="col-span-5 md:flex md:justify-evenly md:col-span-1 lg:ml-20">
         <nav class="my-4 md:text-right">
           <ul class="text-sm flex justify-center border-b border-b-pink-300 pb-4 md:pb-0 md:block md:mb-6 md:border-b-0 md:border-r md:border-r-pink-300">
             <li class="px-4 md:mb-4">
@@ -35,7 +35,7 @@
       </div>
       <main class="col-span-5 justify-center text-center md:col-span-4 px-8">
         <header>
-          <h1 class="text-2xl font-bold my-4 md:text-4xl">
+          <h1 class="text-2xl font-bold mb-4 md:my-12 md:text-4xl">
             {% block header %}
             {% endblock header %}
           </h1>
