Fix column of copyright footer

--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -58,8 +58,9 @@
         </section>
       </main>
     </div>
-    <footer class="text-sm text-center p-8 mt-4 bg-pink-300 sticky">
-      Copyright 2023, Breezy
+    <footer class="grid grid-cols-5 text-sm text-center p-8 mt-4 bg-pink-300 sticky">
+      <div class="md:col-span-1"></div>
+      <div class="col-span-5 md:col-span-4">Copyright 2023, Breezy</div>
     </footer>
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
   </body>
