Clean up some formatting and docstring

--- a/src/flower_store/templates/_flower.html
+++ b/src/flower_store/templates/_flower.html
@@ -1,11 +1,13 @@
 <!-- `flower` is provided by the parent template -->
 <div class="card">
   <a href="{{ url_for('catalog.flower', flower_id=flower.id) }}">
-    <img class="w-full h-48 lg:h-72 object-cover"
-         src="{{ url_for('static', filename='flower_imgs/' + flower.image_file) }}">
-      <div class="pt-1">
-  <span class="text-md">{{ flower.name }}</span>
-</div>
+    <img
+      class="w-full h-48 lg:h-72 object-cover"
+      src="{{ url_for('static', filename='flower_imgs/' + flower.image_file) }}"
+    />
+    <div class="pt-1">
+      <span class="text-md">{{ flower.name }}</span>
+    </div>
   </a>
 </div>
 <!-- or: <article></article> ? -->
