--- a/src/flower_store/templates/search.html
+++ b/src/flower_store/templates/search.html
@@ -3,12 +3,12 @@
   Search
 {% endblock header %}
 {% block content %}
-  <div class="text-center my-4 px-10 md:mx-30">
+  <div class="my-4 px-10 md:mx-30">
     <input type="text"
            name="search"
+           class="outline-none rounded-lg text-gray-700 pr-2 p-2"
            hx-post="/search_results"
            hx-trigger="keyup changed delay:250ms"
-           hx-indicator=".htmx-indicator"
            hx-target="#flower-results"
            placeholder="Search...">
   </div>
