Add note about logging out to admin view

--- a/src/flower_store/templates/admin/index.html
+++ b/src/flower_store/templates/admin/index.html
@@ -1,4 +1,4 @@
 {% extends 'admin/master.html' %}
 {% block body %}
-  <p>Test</p>
+  <p>To log out, add "/logout" to the URL.</p>
 {% endblock body %}
