Add in-stock route and nav link

--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -28,6 +28,9 @@
               <a href="{{ url_for("catalog.catalog") }}">Catalog</a>
             </li>
             <li class="px-4 md:mb-4">
+              <a href="{{ url_for("catalog.in_stock") }}">In-Stock</a>
+            </li>
+            <li class="px-4 md:mb-4">
               <a href="{{ url_for("catalog.search") }}">Search</a>
             </li>
           </ul>
