style full_flower template

--- a/src/flower_store/templates/catalog.html
+++ b/src/flower_store/templates/catalog.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block header %}
-  Catalog
+{{ title }}
 {% endblock header %}
 {% block content %}
   {% include "results.html" %}
