--- a/src/flower_store/templates/full_flower.html
+++ b/src/flower_store/templates/full_flower.html
@@ -1,7 +1,19 @@
 {% extends "base.html" %}
 {% block header %}
-  <h1>{{ title }}</h1>
+  {{ title }}
 {% endblock header %}
 {% block content %}
-  <img src="{{ image_file }}">
+<div class="grid grid-cols-2 gap-5">
+  <img class="col-span-1" src="{{ image_file }}">
+  <ul class="col-span-1 text-left ml-2 md:ml-4 flex flex-col">
+    <li class="md:mt-4 p-2 sm:mt-2"><strong>Bloom size</strong>: {{ flower.bloom_size }}</li>
+    <li class="md:mt-4 p-2 sm:mt-2"><strong>Height</strong>: {{ flower.height }}</li>
+    {% if flower.stock > 0 %}
+      <li class="md:mt-4 p-2 sm:mt-2"><strong>Stock</strong>: {{ flower.stock }}</li>
+      <li class="mt-auto mb-2"><button class="rounded-sm bg-pink-200 p-2">Add to cart</button></li>
+    {% else %}
+      <li class="p-2 italic mt-auto mb-2">Out of Stock</li>
+    {% endif %}
+  </ul>
+</div>
 {% endblock content %}
