--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -33,6 +33,9 @@
             <li class="px-4 md:mb-4">
               <a href="{{ url_for("catalog.search") }}">Search</a>
             </li>
+            <li class="px-4 md:mb-4">
+              <a href="{{ url_for("cart.cart") }}">Cart</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -61,7 +64,7 @@
         </section>
       </main>
     </div>
-    <footer class="grid grid-cols-5 text-sm text-center p-8 mt-4 bg-pink-300 sticky">
+    <footer class="grid grid-cols-5 text-sm text-center p-8 mt-10 bg-pink-300 sticky">
       <div class="md:col-span-1"></div>
       <div class="col-span-5 md:col-span-4">Copyright 2023, Breezy</div>
     </footer>
