--- a/src/flower_store/templates/cart.html
+++ b/src/flower_store/templates/cart.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block header %}
-  <h1>Shopping Cart</h1>
+  Shopping Cart
 {% endblock header %}
 {% block content %}
 {% endblock content %}
