Add image to home page

--- a/src/flower_store/templates/home.html
+++ b/src/flower_store/templates/home.html
@@ -6,17 +6,7 @@
 {% endblock header %}
 {% block content %}
   <div class="m-6 md:mx-12 xl:mx-20">
-    <p>
-      Voluptas aut nostrum veniam natus et commodi iste. Ut id quia autem voluptatum. Ad minima laborum quos odio at officiis. Error voluptatem optio unde. Maiores unde deleniti sit et quia ratione recusandae. Quae laudantium consequatur ut similique possimus velit odio.
-    </p>
-    <br>
-    <p>
-      Consequuntur qui veritatis facilis atque velit ut. Provident debitis praesentium perspiciatis. Soluta sit consectetur velit sint velit consequuntur non. Ipsa libero quidem voluptatem officia fuga ut magnam non.
-    </p>
-    <br>
-    <p>
-      Dignissimos laborum sit voluptatem omnis. Corporis sunt impedit mollitia. Tempore quos fugit sit impedit quam nam.
-    </p>
+    <img class="border rounded-lg" src="{{ url_for('static', filename='flower_imgs/' + 'dahlia_vase.jpg') }}">
   </div>
   <div>
     <br class="my-20">
