--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -19,7 +19,7 @@
   <body class="bg-gradient-to-br from-sky-100">
     <div class="grid grid-cols-5 justify-items-center">
       <div class="col-span-5 md:flex md:justify-evenly md:col-span-1 lg:ml-20">
-        <nav class="my-4 md:text-right">
+        <nav class="my-4 md:text-right md:py-4">
           <ul class="text-sm flex justify-center border-b border-b-pink-300 pb-4 md:pb-0 md:block md:mb-6 md:border-b-0 md:border-r md:border-r-pink-300">
             <li class="px-4 md:mb-4">
               <a href="{{ url_for("home") }}">Home</a>
