--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% assets "css" %}
-      <link rel="stylesheet" href="{{ ASSET_URL }}" />
+    <!-- <link rel="stylesheet" href="{{ ASSET_URL }}" /> -->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='dist/main.css') }}"
+    />
     {% endassets %}
     <title>
-      {% if title %}
-        {{ title }} - Flower Shop
-      {% else %}
-        Flower Shop
-      {% endif
+      {% if title %} {{ title }} - Flower Shop {% else %} Flower Shop {% endif
       %}
     </title>
   </head>
@@ -20,21 +20,23 @@
     <div class="grid grid-cols-5 justify-items-center">
       <div class="col-span-5 md:flex md:justify-evenly md:col-span-1 lg:ml-20">
         <nav class="my-4 md:text-right md:py-4">
-          <ul class="text-sm flex justify-center border-b border-b-pink-300 pb-4 md:pb-0 md:block md:mb-6 md:border-b-0 md:border-r md:border-r-pink-300">
+          <ul
+            class="text-sm flex justify-center border-b border-b-pink-300 pb-4 md:pb-0 md:block md:mb-6 md:border-b-0 md:border-r md:border-r-pink-300"
+          >
             <li class="px-4 md:mb-4">
-              <a href="{{ url_for("home") }}">Home</a>
+              <a href="{{ url_for('home') }}">Home</a>
             </li>
             <li class="px-4 md:mb-4">
-              <a href="{{ url_for("catalog.catalog") }}">Catalog</a>
+              <a href="{{ url_for('catalog.catalog') }}">Catalog</a>
             </li>
             <li class="px-4 md:mb-4">
-              <a href="{{ url_for("catalog.in_stock") }}">In-Stock</a>
+              <a href="{{ url_for('catalog.in_stock') }}">In-Stock</a>
             </li>
             <li class="px-4 md:mb-4">
-              <a href="{{ url_for("catalog.search") }}">Search</a>
+              <a href="{{ url_for('catalog.search') }}">Search</a>
             </li>
             <li class="px-4 md:mb-4">
-              <a href="{{ url_for("cart.cart") }}">Cart</a>
+              <a href="{{ url_for('cart.cart') }}">Cart</a>
             </li>
           </ul>
         </nav>
@@ -42,20 +44,19 @@
       <main class="col-span-5 justify-center text-center md:col-span-4 px-8">
         <header>
           <h1 class="text-2xl font-bold mb-4 md:my-12 md:text-4xl">
-            {% block header %}
-            {% endblock header %}
+            {% block header %} {% endblock header %}
           </h1>
         </header>
-        <section>
-          {% block content %}
-          {% endblock content %}
-        </section>
+        <section>{% block content %} {% endblock content %}</section>
       </main>
     </div>
-    <footer class="grid grid-cols-5 text-sm text-center p-8 mt-10 bg-pink-300 bg-opacity-50 sticky">
+    <footer
+      class="grid grid-cols-5 text-sm text-center p-8 mt-10 bg-pink-300 bg-opacity-50 sticky"
+    >
       <div class="md:col-span-1"></div>
       <div class="col-span-5 md:col-span-4">Copyright 2023, Breezy</div>
     </footer>
-    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+    <!-- <script src="https://unpkg.com/htmx.org@1.9.2"></script> -->
+    <script src="{{ url_for('static', filename='dist/main.js') }}"></script>
   </body>
 </html>
