--- a/src/flower_store/static/src/main.css
+++ b/src/flower_store/static/src/main.css
@@ -9,3 +9,7 @@
 .pager {
   @apply py-2 px-3 text-purple-800 underline underline-offset-2 decoration-solid hover:decoration-wavy transition ease-out duration-300;
 }
+
+.link {
+  @apply underline underline-offset-2 hover:text-purple-800 transition ease-out duration-300;
+}
