--- a/src/flower_store/templates/base.html
+++ b/src/flower_store/templates/base.html
@@ -53,7 +53,12 @@
       class="grid grid-cols-5 text-sm text-center p-8 mt-10 bg-pink-300 bg-opacity-50 sticky"
     >
       <div class="md:col-span-1"></div>
-      <div class="col-span-5 md:col-span-4">Copyright 2023, Breezy</div>
+      <div class="col-span-5 md:col-span-4">
+        For source code, see:
+        <a class="link" href="https://github.com/DavidRambo/flower-store"
+          >GitHub</a
+        >
+      </div>
     </footer>
     <script src="{{ url_for('static', filename='dist/main.js') }}"></script>
   </body>
